--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@cloudbase/wx-cloud-client-sdk": "^1.4.0",
     "@vant/weapp": "^1.11.7"
   }
 }
